调整项目架构