@@ -6,7 +6,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
 import javax.servlet.ServletOutputStream;
@@ -14,6 +13,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
+import java.util.Base64;
 
 /**
  * @author yuan.chen
@@ -87,10 +87,10 @@ public class KaptchaController {
         outputStream = new ByteArrayOutputStream();
         ImageIO.write(image, "jpg", outputStream);
         // 对字节数组Base64编码
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder encoder =Base64.getEncoder();
 
         String str = "data:image/jpeg;base64,";
-        String base64Img = str + encoder.encode(outputStream.toByteArray()).replace("\n", "").replace("\r", "");
+        String base64Img = str + encoder.encodeToString(outputStream.toByteArray()).replace("\n", "").replace("\r", "");
 
         return base64Img;
     }
